Latest commit, before branching off to incorporate SOP solving

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ data/*
 *.suo
 *.sdf
 *.pdb
+*.bin
+*.obj
+*.mx
 # =========================
 # Operating System Files
 # =========================
